<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">课表</string>
    <string name="import_file">导入文件</string>
    <string name="import_short">导入</string>
    <string name="manual_input">手动输入</string>
    <string name="manual_short">手动</string>
    <string name="clear">清空</string>
    <string name="reminder">提醒</string>
    <string name="empty_title">导入课表文件</string>
    <string name="empty_subtitle">支持 PDF、DOC、DOCX，也可手动输入课程生成周一至周日的周课表。</string>
    <string name="manual_name">课程名称 *</string>
    <string name="manual_teacher">老师</string>
    <string name="manual_location">教室</string>
    <string name="manual_weeks">周次</string>
    <string name="manual_weeks_hint">例如 1-16周</string>
    <string name="manual_day">星期</string>
    <string name="manual_start_period">开始节次</string>
    <string name="manual_end_period">结束节次</string>
    <string name="add">添加</string>
    <string name="edit_course">编辑课程</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="ok">知道了</string>
    <string name="name_required">请输入课程名称</string>
    <string name="schedule_summary">当前共 %1$d 门课程。</string>
    <string name="reminder_dialog_title">上课提醒</string>
    <string name="reminder_dialog_message">提前多少分钟发送通知？填写 0 可关闭提醒。</string>
    <string name="reminder_input_hint">例如 15</string>
    <string name="reminder_invalid">请输入不小于 0 的分钟数</string>
    <string name="reminder_saved">已设置提前 %1$d 分钟提醒</string>
    <string name="reminder_off">已关闭上课提醒</string>
    <string name="notification_permission_denied">需要通知权限才能发送上课提醒</string>
    <string name="reminder_test">发送测试通知</string>
    <string name="reminder_test_text">测试通知：已设置提前 %1$d 分钟提醒</string>
    <string name="reminder_test_off_text">测试通知：提醒已关闭</string>
    <string name="notification_channel_name">上课提醒</string>
    <string name="notification_channel_description">每节课开始前提醒上课</string>
    <string name="reminder_service_channel">后台提醒服务</string>
    <string name="reminder_service_title">上课提醒已开启</string>
    <string name="reminder_service_text">正在后台等待上课提醒，无需打开 App</string>
    <string name="notification_title">上课提醒</string>
    <string name="notification_text">%1$s %2$s 即将开始 · %3$s</string>
    <string name="notification_text_no_location">%1$s %2$s 即将开始</string>
    <string name="notification_period">第%1$d节</string>
</resources>
